# instrument-inventory-management

./: Prompt.md  hospital_inventory_system_design.md  implementation_plan.md  migrate_xlsm_to_sqlite.py  phase1.md  phase2.md
instrument-inventory/: inventory.db  inventory.db-shm  package-lock.json  package.json  task.md
instrument-inventory/src/: App.tsx  api.ts  index.css  types.ts
instrument-inventory/src-tauri/: Cargo.toml  tauri.conf.json
instrument-inventory/src-tauri/migrations/: 001_init.sql
instrument-inventory/src-tauri/src/: db.rs  lib.rs  main.rs  models.rs
instrument-inventory/src-tauri/src/commands/: database.rs  export.rs  inventory.rs  loans.rs  mod.rs  staff.rs  transactions.rs
instrument-inventory/src/components/: Layout.tsx  LoginScreen.tsx  Sidebar.tsx
instrument-inventory/src/hooks/: useInventory.ts  useStaff.ts  useTransactions.ts
instrument-inventory/src/pages/: ExportPage.tsx  InventoryGrid.tsx  StaffManagement.tsx  Transactions.tsx
