[package]
name = "instrument-inventory"
version = "0.1.0"
description = "Hospital Instrument Inventory Management System"
authors = ["ken"]
edition = "2021"

[lib]
name = "instrument_inventory_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
csv = "1.3"
chrono = { version = "0.4", features = ["serde"] }
